--- a/units-testing.ipynb
+++ b/units-testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,50 +18,57 @@
     "    # Avoid 1. and write 1 instead\n",
     "    if first_uncertain > 1:\n",
     "        first_uncertain = first_uncertain + 1\n",
+    "     # my addition to capture uncertainties greater than the value itself (hopefully)\n",
+    "    elif first_uncertain == 0:\n",
+    "        first_uncertain = 1\n",
     "\n",
     "    return(f'{my_val[:first_uncertain]}({my_err[:err_points]})e{val[1]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1.00000000000000005551', '-01']\n",
-      "['1.00000000000000000000', '+00']\n",
-      "0\n"
+      "['7.50000000000000000000', '+01']\n",
+      "['1.67000000000000000000', '+02']\n",
+      "0\n",
+      "7.5\n"
      ]
     }
    ],
    "source": [
-    "val = 0.1\n",
-    "err = 1\n",
+    "val = 75\n",
+    "err = 167\n",
     "err_points = 1\n",
     "\n",
     "val = f'{val:.20e}'.split('e')\n",
     "err = f'{err:.20e}'.split('e')\n",
     "first_uncertain = int(val[1]) - int(err[1]) + err_points\n",
     "\n",
+    "\n",
     "print(val)\n",
     "print(err)\n",
-    "print(first_uncertain)"
+    "print(first_uncertain)\n",
+    "round(float(val[0]),-1)\n",
+    "print(float(val[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0000000000\n",
-      "10000000000\n"
+      "10.0000000000\n",
+      "20000000000\n"
      ]
     }
    ],
@@ -74,29 +81,46 @@
     "elif first_uncertain == 0:\n",
     "    first_uncertain = 1\n",
     "\n",
+    "\n",
     "print(my_val)\n",
     "print(my_err)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1(2)e+01\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print((f'{my_val[:first_uncertain]}({my_err[:err_points]})e{val[1]}'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0(1)e+00'"
+       "'-'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "(f'{my_val[:first_uncertain]}({my_err[:err_points]})e{val[1]}')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
